--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         </div>
         <form class="footer-form" name="subscribe" autocomplete="on">
           <label class="subscribe-label">
-            <p class="subscribe__text">Subscribe</p>
+            Subscribe
             <input
               class="footer-email__input"
               type="email"
@@ -539,7 +539,7 @@
         <form class="modal-form" name="form-modal" autocomplete="on">
           <!-- 1 text-->
           <label class="label-modal-input">
-            <p class="modal-name__text">Name</p>
+            Name
             <svg class="modal__svg" width="18" height="18">
               <use href="/images/icons.svg#icon-name"></use>
             </svg>
@@ -553,7 +553,7 @@
           </label>
           <!-- 2 tel -->
           <label class="label-modal-input">
-            <p class="modal-name__text">Phone</p>
+            Phone
             <svg class="modal__svg" width="18" height="18">
               <use href="/images/icons.svg#icon-phone"></use>
             </svg>
@@ -561,7 +561,7 @@
           </label>
           <!-- 3 email -->
           <label class="label-modal-input">
-            <p class="modal-name__text">Email</p>
+            Email
             <svg class="modal__svg" width="18" height="18">
               <use href="/images/icons.svg#icon-mail"></use>
             </svg>
@@ -569,7 +569,7 @@
           </label>
           <!-- 4 textarea -->
           <label class="label-modal-textarea">
-            <p class="modal-name__text">Comment</p>
+            Comment
             <textarea
               name="my-feedback"
               class="modal__textarea"
@@ -588,14 +588,12 @@
             />
             <label class="for-check-label" for="modal-checkbox">
               <span class="for-check">
-                <svg class="checkbox__svg" width="10" height="8" for="check">
+                <svg class="checkbox__svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
               </span>
-              <p class="checkbox__text">
-                I accept the terms and conditions of the
-                <a class="checkbox__href">Privacy Policy</a>
-              </p>
+              I accept the terms and conditions of the
+              <a class="checkbox__href">Privacy Policy</a>
             </label>
           </div>
           <!-- 6 button -->
