--- a/index.html
+++ b/index.html
@@ -536,9 +536,9 @@
         <!-- ~~~~~~~~~~~form~~~~~~~~~ -->
         <form class="modal-form" name="form-modal" autocomplete="on">
           <!-- 1 text-->
-          <div class="container-for-lable">
-            <label class="label-modal-input" for="user-name">Name</label>
-            <div class="container-for-inputsvg">
+          <div class="container-for-label">
+            <label class="label-for-text" for="user-name">Name</label>
+            <div class="container-input-svg">
               <input
                 type="text"
                 name="user-name"
@@ -547,15 +547,15 @@
                 autofocus
                 id="user-name"
               />
-              <svg class="modal__svg" width="18" height="18">
-                <use href="/images/icons.svg#icon-name"></use>
+              <svg class="modal__svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-name"></use>
               </svg>
             </div>
           </div>
           <!-- 2 tel -->
-          <div class="container-for-lable">
-            <label class="label-modal-input" for="user-phone">Phone</label>
-            <div class="container-for-inputsvg">
+          <div class="container-for-label">
+            <label class="label-for-text" for="user-phone">Phone</label>
+            <div class="container-input-svg">
               <input
                 type="tel"
                 name="user-phone"
@@ -563,15 +563,15 @@
                 id="user-phone"
                 required
               />
-              <svg class="modal__svg" width="18" height="18">
-                <use href="/images/icons.svg#icon-phone"></use>
+              <svg class="modal__svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
           <!-- 3 email -->
-          <div class="container-for-lable">
-            <label class="label-modal-input" for="user-email">Email</label>
-            <div class="container-for-inputsvg">
+          <div class="container-for-label">
+            <label class="label-for-text" for="user-email">Email</label>
+            <div class="container-input-svg">
               <input
                 type="email"
                 name="user-email"
@@ -579,14 +579,14 @@
                 id="user-email"
                 required
               />
-              <svg class="modal__svg" width="18" height="18">
-                <use href="/images/icons.svg#icon-mail"></use>
+              <svg class="modal__svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-mail"></use>
               </svg>
             </div>
           </div>
           <!-- 4 textarea -->
           <div class="container-for-textarea">
-            <label class="label-modal-textarea" for="user-comment"
+            <label class="label-for-text" for="user-comment"
               >Comment</label
             >
             <textarea
