--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
       </div>
     </footer>
     <!--~~~~~~~~~~~~~~~~~~~~~modal-window~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay">
       <div class="modal-window-inner">
         <!-- 0 close -->
         <button type="button" class="button-modal-close">
